src/evaluator/expression/if_expression/tests/snapshots/monkey_interpreter__evaluator__expression__if_expression__tests__test_evaluator_if_nodes_case1.snap
---
source: src/evaluator/expression/if_expression/tests/mod.rs
expression: "evaluator.evaluate(crate::syntax_analysis::SyntaxAnalysis::from(crate::lexical_analysis::LexicalAnalysis::from(code)))"

---
Integer {
    value: 10,
}
