src/evaluator/expression/if_expression/tests/snapshots/monkey_interpreter__evaluator__expression__if_expression__tests__test_evaluator_if_nodes_case2.snap
---
source: src/evaluator/expression/if_expression/tests/mod.rs
expression: "crate::evaluator::evaluate(crate::evaluator::model::evaluator_context::EvaluatorContext::new(),\n                           crate::syntax_analysis::get_abstract_syntax_tree(crate::lexical_analysis::get_tokens(code)))"
---
(
    EvaluatorContext,
    Null,
)
